--- a/buscador-noticias/package.json
+++ b/buscador-noticias/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "vue": "^3.5.12",
+    "vue-axios": "^3.5.2",
     "vuetify": "^3.7.4"
   },
   "devDependencies": {
